--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,5 @@
     <string name="alle_rezepte">Alle Rezepte</string>
 
     <string name="username">Benutzername</string>
-    <string name="password">Password</string>
+    <string name="password">Passwort</string>
 </resources>
