fixed image popup problem when entering the recipelist

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
 
     <string name="username">Benutzername</string>
     <string name="password">Passwort</string>
+
+    <string name="image">Platzhalter-Bild</string>
 </resources>
