added detailed information of recipes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="password">Passwort</string>
 
     <string name="image">Platzhalter-Bild</string>
+    <string name="difficulty">Schwierigkeit</string>
+    <string name="duration">Dauer</string>
+    <string name="creator">Ersteller</string>
+
+    <string name="textfield">Textfield</string>
 </resources>
